MTX-398
* Replaced `Stream.toList()` with `Stream..collect(Collectors.toList())`
to avoid the `UnsupportedOperationException`.

* Fixed `SourceCopy` processing: since tables are usually intended to be
mutable by default, we have carried out a straightforward deep copy of
rows and included comments to clarify the rationale behind this
operation.